auth components loaded inside the module as children components

--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -1,3 +1,7 @@
 <div class="container-fluid pt-3">
-    <p>auth works!</p>
+    <a class="btn btn-primary mr-2" routerLink="/auth/login">Login</a>
+    <a class="btn btn-success mr-2" routerLink="/auth/register">Register</a>
+    <a class="btn btn-warning" routerLink="/auth/forget-password">Forget Password</a>
+
+    <router-outlet></router-outlet>
 </div>
