--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -7,6 +7,7 @@
       <div class="navbar-nav">
         <a class="nav-link active" routerLink="/home">Home <span class="sr-only">(current)</span></a>
         <a class="nav-link" routerLink="/payment-methods">Payment Methods</a>
+        <a class="nav-link" routerLink="/product">Product</a>
         <a class="nav-link" routerLink="/auth">Login</a>
       </div>
     </div>
